--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Asli Pied Piper</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="content">
+        <div class="name">
+            <!-- <h1 class="hname">P</h1>
+            <h1 class="hname">I</h1>
+            <h1 class="hname">E</h1>
+            <h1 class="hname">D</h1>
+            <br>
+            <h1 class="hname">P</h1>
+            <h1 class="hname">I</h1>
+            <h1 class="hname">P</h1>
+            <h1 class="hname">E</h1>
+            <h1 class="hname">R</h1> -->
+            <h1>PIED PIPER</h1>
+        </div>
+        <div class="redirect">
+            <p class="tosite"><a href="main.html">AESTHETIC HO GAYA TO SITE PE CHALEIN?</a></p>
+        </div>
+    </div>
+</body>
+</html>
